--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,13 @@
 {
   "hosting": {
-    "public": "dist/get-away",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
+  },
+  "database": {
+    "rules": "database.rules.json"
   }
 }
